syntax = "proto3";

package proto;

option go_package = "/api";

service FileService {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
}

message FileMetadata {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}

message UploadFileRequest {
  string filename = 1;
  bytes filedata = 2;
}

message UploadFileResponse {
  string message = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileMetadata files = 1;
}

message DownloadFileRequest {
  string filename = 1;
}

message DownloadFileResponse {
  bytes filedata = 1;
}
